--- a/assets/styles/css/Registro.css
+++ b/assets/styles/css/Registro.css
@@ -2,18 +2,19 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color: rgb(140, 140, 140);
+  font-family: Arimo;
   /*background-image: url(../Imagenes/Imagen-Login.jpg);*/
   /*background-size: cover;*/
   /*background-repeat: no-repeat;*/
 }
 
 .Fondo-Blanco {
-  background-color: white;
-  width: 900px;
-  height: 500px;
-  position: fixed;
-  top: 50%;
+  background-color: #000;
+  width: 55em;
+  height: 32em;
+  margin-top: 30%;
+  position: relative;
+  top: 35%;
   left: 50%;
   transform: translate(-50%, -50%);
   border-radius: 5%;
@@ -54,11 +55,11 @@ input[type="date"] {
 .Insertar-Primero,
 .Insertar-Segundo {
   position: relative;
-  left: 600px;
-  bottom: 230px;
+  left: 30em;
+  bottom: 11em;
   display: flex;
   justify-content: center;
-  font-size: 14px;
+  font-size: 18px;
   border-radius: 6px;
   line-height: 1.5;
   padding: 5px 10px;
@@ -92,21 +93,24 @@ input[type="date"] {
   outline: 0;
   cursor: pointer;
   border: none;
-  padding: 0 56px;
+  margin-top: 10px;
+  padding: 0px 56px;
   height: 45px;
   line-height: 45px;
   border-radius: 7px;
   background-color: #0070f3;
   color: white;
   font-weight: 400;
-  font-size: 16px;
+  font-size: 18px;
   box-shadow: 0 4px 14px 0 rgb(0 118 255 / 39%);
   transition: background 0.2s ease, color 0.2s ease, box-shadow 0.2s ease;
+
+}
   :hover {
     background: rgba(0, 118, 255, 0.9);
     box-shadow: 0 6px 20px rgb(0 118 255 / 23%);
   }
-}
+
 
 .Boton-Registrarse,
 .Boton-Siguiente {
@@ -150,17 +154,19 @@ input::-webkit-inner-spin-button {
 }
 
 .Genero {
+
+  margin-top: 2em;
   display: inline-flex;
   background: #fff;
   height: 70px;
   width: 300px;
   align-items: center;
   position: relative;
-  left: 570px;
+  left: 33em;
   bottom: 215px;
   justify-content: space-evenly;
   border-radius: 5px;
-  padding: 20px 15px;
+  padding: 20px 25px;
 }
 .Genero .option {
   background: #fff;
