--- a/assets/styles/css/Registro.css
+++ b/assets/styles/css/Registro.css
@@ -2,19 +2,18 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: Arimo;
+  background-color: rgb(140, 140, 140);
   /*background-image: url(../Imagenes/Imagen-Login.jpg);*/
   /*background-size: cover;*/
   /*background-repeat: no-repeat;*/
 }
 
 .Fondo-Blanco {
-  background-color: #000;
-  width: 55em;
-  height: 32em;
-  margin-top: 30%;
-  position: relative;
-  top: 35%;
+  background-color: white;
+  width: 900px;
+  height: 500px;
+  position: fixed;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   border-radius: 5%;
@@ -55,11 +54,11 @@ input[type="date"] {
 .Insertar-Primero,
 .Insertar-Segundo {
   position: relative;
-  left: 30em;
-  bottom: 11em;
+  left: 600px;
+  bottom: 230px;
   display: flex;
   justify-content: center;
-  font-size: 18px;
+  font-size: 14px;
   border-radius: 6px;
   line-height: 1.5;
   padding: 5px 10px;
@@ -93,24 +92,21 @@ input[type="date"] {
   outline: 0;
   cursor: pointer;
   border: none;
-  margin-top: 10px;
-  padding: 0px 56px;
+  padding: 0 56px;
   height: 45px;
   line-height: 45px;
   border-radius: 7px;
   background-color: #0070f3;
   color: white;
   font-weight: 400;
-  font-size: 18px;
+  font-size: 16px;
   box-shadow: 0 4px 14px 0 rgb(0 118 255 / 39%);
   transition: background 0.2s ease, color 0.2s ease, box-shadow 0.2s ease;
-
-}
   :hover {
     background: rgba(0, 118, 255, 0.9);
     box-shadow: 0 6px 20px rgb(0 118 255 / 23%);
   }
-
+}
 
 .Boton-Registrarse,
 .Boton-Siguiente {
@@ -154,19 +150,17 @@ input::-webkit-inner-spin-button {
 }
 
 .Genero {
-
-  margin-top: 2em;
   display: inline-flex;
   background: #fff;
   height: 70px;
   width: 300px;
   align-items: center;
   position: relative;
-  left: 33em;
+  left: 570px;
   bottom: 215px;
   justify-content: space-evenly;
   border-radius: 5px;
-  padding: 20px 25px;
+  padding: 20px 15px;
 }
 .Genero .option {
   background: #fff;
