--- a/assets/styles/css/style copy.css
+++ b/assets/styles/css/style copy.css
@@ -1289,7 +1289,7 @@ section{
 .footer{
    background-color: var(--white);
    border-top: var(--border);
-   position: absolute;
+   position: relative;
    bottom: 0; left: 0; right: 0;
    text-align: center;
    font-size: 2rem;
