--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -1289,7 +1289,7 @@ section{
 .footer{
    background-color: var(--white);
    border-top: var(--border);
-   position: absolute;
+   position: relative;
    bottom: 0; left: 0; right: 0;
    text-align: center;
    font-size: 2rem;
@@ -1297,6 +1297,7 @@ section{
    color:var(--black);
    margin-top: 1rem;
    z-index: 1000;   /* padding-bottom: 9.5rem; */
+   
 }
 
 .footer span{
