--- a/assets/styles/css/Login.css
+++ b/assets/styles/css/Login.css
@@ -92,6 +92,27 @@ body {
   transition: background 0.2s ease, color 0.2s ease, box-shadow 0.2s ease;
 }
 
+.Boton-Iniciar-apagado {
+  display: flex;
+  position: relative;
+  top: 120px;
+  left: 36em;
+  outline: 0;
+  text-align: center;
+  cursor: pointer;
+  border: none;
+  justify-content: center;
+  padding: 0 56px;
+  height: 45px;
+  line-height: 45px;
+  border-radius: 7px;
+  background-color: #575757;
+  color: white;
+  font-weight: 400;
+  font-size: 16px;
+  transition: background 0.2s ease, color 0.2s ease, box-shadow 0.2s ease;
+}
+
 .Boton-Registrar {
   display: flex;
   position: relative;
@@ -176,7 +197,7 @@ input::-webkit-inner-spin-button {
   }
 
   .Boton-Iniciar,
-  .Boton-Registrar {
+  .Boton-Registrar,.Boton-Iniciar-apagado {
     left: 62%;
   }
 }
@@ -207,7 +228,7 @@ input::-webkit-inner-spin-button {
   }
 
   .Boton-Iniciar,
-  .Boton-Registrar {
+  .Boton-Registrar,.Boton-Iniciar-apagado {
     left: 54%;
   }
 }
@@ -242,7 +263,7 @@ input::-webkit-inner-spin-button {
     top: 7em;
   }
 
-  .Boton-Iniciar {
+  .Boton-Iniciar,.Boton-Iniciar-apagado {
     left: 19%;
     top: 15em;
   }
