--- a/assets/styles/css/notipago.css
+++ b/assets/styles/css/notipago.css
@@ -89,8 +89,13 @@ input:placeholder {
 .form-txt a {
     color: #181818;
     font-size: 14px;
-    font-weight: 600;
+    font-weight: 600;   
     text-decoration: none;
+}
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
 
 .btn {
