--- a/assets/styles/css/carousel.css
+++ b/assets/styles/css/carousel.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap');
 
 .banner {
     background-color: #24252a;
@@ -37,6 +38,36 @@
     padding: 25px 50px;
     opacity: 0;
     transition: all 0.5s ease-in-out;
+}
+
+#p {
+    display: block;
+    margin: 0px auto;
+    width: 800px;
+    height: 40%;
+    border-radius: 8px;
+    background-color: rgb(121, 110, 110, .7);
+}
+.paragraf p{
+    display: block;
+    margin: 0px auto;
+    width: 75%;
+    font-family: 'Roboto', sans-serif;
+    text-align: justify;
+    color: #fff;
+    line-height: 25px;
+    font-size: 17px;
+    padding-top: 5%;
+}
+
+
+
+.container p {
+    font-family: 'Roboto', sans-serif;
+    text-align: justify;
+    color: #fff;
+    line-height: 25px;
+    font-size: 17px;
 }
 
 .arrow {
@@ -94,7 +125,7 @@
     .carousel-wrapper {
         z-index: 333;
         height: 280px;
-        width: 500px;
+        width: 600px;
         margin: 20px auto;
         border: 2px solid black;
     }
@@ -103,13 +134,45 @@
         height: 20px;
         font-size: 39px;
     }
+    #p {
+        width: 500px;
+        height: 60%;
+    }
+    #p p{
+        font-size: 16px;
+    }
 }
+@media (max-width: 670px){
+    .carousel-wrapper {
+        width: 80%;
+    }
+    #p {
+        width: 80%;
+        height: 60%;
+    }
+    #p p{
 
+        font-size: 14px;
+    }
+}
 @media (max-width: 400px){
     #title-carousel {
         font-size: 35px;
     }
-    .carousel-wrapper {
-        width: 90vw;
+    .carousel-wrapper, #p {
+        width: 100vw;
+        padding: 1vw;
+    }
+
+    #p {
+        height: 60%;
+    }
+    #p p{
+        
+        font-size: 14px;
+    }
+
+    .container {
+        margin-top: 10%;
     }
   }
