--- a/assets/styles/css/notipago.css
+++ b/assets/styles/css/notipago.css
@@ -99,18 +99,11 @@ input::-webkit-inner-spin-button {
 }
 
 .btn {
-    font-size: 16px;
-    color: #ffcfff;
-    border: 0;
-    border-radius: 25px;
-    background: linear-gradient(90deg, rgba(214, 0, 254, 1), 0%, rgba(136, 1, 254, 1) 77%);
-
-    box-shadow:  0 0 20px rgba(214, 0, 254, 0.4);
-    cursor: pointer;
+    background-color:blue;
 }
 
 .btn:hover {
-    background: linear-gradient(90deg, rgba(136, 1, 254, 1) 0%, rgba(214, 0, 254, 1) 77%);
+    background: linear-gradient(90deg, rgba(blue) 0%, rgba(blue) 77%);
 }
 
 @media(max-width: 932px) {
