--- a/assets/styles/css/cards.css
+++ b/assets/styles/css/cards.css
@@ -6,7 +6,7 @@
 body {
     width: 100%;
     font-family: sans-serif;
-    background-color: #24252a;
+    background-color: #e3e5f3;
 }
 
 .container {
@@ -24,7 +24,7 @@ body {
     flex: row;
     flex-wrap: wrap;
     max-width: 1100px;
-    height: 490px;
+    height: 540px;
     margin-left: 20px;
     margin-bottom: 20px;
     border-radius: 6px;
