--- a/assets/styles/css/carousel.css
+++ b/assets/styles/css/carousel.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap');
 
 .banner {
-    background-color: #24252a;
+    background-color: #e3e5f3;
     height: 90vh;
 }
 
@@ -11,8 +11,8 @@
     font-size: 54px;
     text-transform: uppercase;
     align-items: center;
-    color: #ffffff;
-    font-family: 'Poppins', sans-serif;
+    color: #000000;
+    font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
     width: 800px;
@@ -46,7 +46,7 @@
     width: 800px;
     height: 40%;
     border-radius: 8px;
-    background-color: rgb(121, 110, 110, .7);
+    background-color: rgba(46, 43, 43, 0.89);
 }
 .paragraf p{
     display: block;
@@ -57,7 +57,7 @@
     color: #fff;
     line-height: 25px;
     font-size: 17px;
-    padding-top: 5%;
+    padding-top: 1%;
 }
 
 
