--- a/assets/styles/css/Registro.css
+++ b/assets/styles/css/Registro.css
@@ -41,14 +41,28 @@ body {
   background-color: transparent;
 }
 
+#Texto-Genero{
+  position: relative;
+  left: 29.5em;
+  bottom: 16.5em;
+  color: white;
+  font-size: 20px;
+}
 
+#Texto-Fecha{
+  position: relative;
+  left: 29.5em;
+  bottom: 14.5em;
+  color: white;
+  font-size: 20px;
+}
 input[type="date"] {
   background-color: #0080ff;
   padding: 15px;
   width: 250px;
   position: relative;
-  left: 30.4em;
-  bottom: 16em;
+  left: 20.4em;
+  bottom: 13.5em;
   color: #ffffff;
   font-size: 18px;
   border: none;
@@ -134,14 +148,14 @@ input[type="date"] {
  margin-top: 10px ;
  position: relative;
  left: 31.5em;
- bottom: 19em;
+ bottom: 16.3em;
 
 }
 
 .Boton-Regresar {
   position: relative;
   left: 31.5em;
-  bottom: 12em;
+  bottom: 10em;
   width: 11.4em;
 }
 
@@ -177,7 +191,7 @@ input::-webkit-inner-spin-button {
   width: 300px;
   align-items: center;
   position: relative;
-  left: 32.6em;
+  left: 21.6em;
   bottom: 17em;
   justify-content: space-evenly;
   border-radius: 5px;
@@ -266,9 +280,13 @@ input[type="radio"] {
 
   }
 
+  #Texto-Genero{
+    left: 24.5em;
+  }
+
   .Genero{
 
-    left: 26.5em;
+    left: 15.5em;
 
   }
 
@@ -291,9 +309,13 @@ input[type="radio"] {
 
   }
 
+  #Texto-Fecha  {
+    left: 24.5em;
+  }
+
   input[type="date"] {
 
-    left: 24.9em;
+    left: 13.9em;
 
   }
 
@@ -324,10 +346,14 @@ input[type="radio"] {
   width: 18em;
 
 }
+#Texto-Genero{
+  left: 16.5em;
+
+}
 
 .Genero{
 
-  left: 50%;
+  left: 20%;
 
   width: 250px;
 
@@ -353,9 +379,14 @@ input[type="radio"] {
 
 }
 
+
+#Texto-Fecha  {
+  left: 16.5em;
+}
+
 input[type="date"] {
 
-  left: 50%;
+  left: 20%;
 
 }
 
@@ -369,7 +400,7 @@ input[type="date"] {
   .Fondo-Blanco {
     width: 20em;
     margin-top: 70%;
-    height: 55em;
+    height: 58em;
   }
   .Registro_Imagen{
 
@@ -405,7 +436,7 @@ input[type="date"] {
 .Boton-Regresar{
 
   left: 19%;
-  top: 11em;
+  top: 14em;
 
 
 
@@ -414,8 +445,13 @@ input[type="date"] {
 .Boton-Registrarse{
 
   left: 19%;
-  top: 5em;
+  top: 7.5em;
 
+
+}
+#Texto-Genero{
+  left: 3.5em;
+  top: 7.2em;
 
 }
 
@@ -426,12 +462,17 @@ input[type="date"] {
   top: 7.5em;
 
 }
+#Texto-Fecha  {
+  left: 3.5em;
+  top: 7.8em;
+}
+
 
 input[type="date"] {
 
   left: 10.5%;
 
-  top: 7.5em;
+  top: 9.5em;
 
 }
 
