--- a/assets/styles/css/notipago.css
+++ b/assets/styles/css/notipago.css
@@ -106,6 +106,22 @@ input::-webkit-inner-spin-button {
     background: linear-gradient(90deg, rgba(blue) 0%, rgba(blue) 77%);
 }
 
+.selectWrapper{
+    position: relative;
+    left: 2em;
+    border-radius:36px;
+    display:inline-block;
+    overflow:hidden;
+    background:#cccccc;
+    border:1px solid #cccccc;
+  }
+  .selectBox{
+    width:300px;
+    height:40px;
+    border:0px;
+    outline:none;
+  }
+
 @media(max-width: 932px) {
     .body {
         padding: 30px;
